--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "dependencies": {
     "@types/express": "^5.0.3",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
+    "install": "^0.13.0",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
+    "npm": "^11.5.2",
     "uuid": "^11.1.0"
   }
 }
